# PersonaVerse

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.aiassistant/rules/: 基本规则.md
apps/agent/: README.md  RULE.md  pyproject.toml
apps/agent/docs/: ARCHITECTURE.md  README.md
apps/agent/src/: README.md  __init__.py  client.py  main.py
apps/agent/src/adapters/: README.md  base.py  ollama_adapter.py  openai.py  registry.py
apps/agent/src/api/: README.md  models.py  routes.py
apps/agent/src/core/: README.md  llm.py  prompts.py
apps/agent/src/router/: base.py
apps/agent/src/services/: README.md  geo_service.py
apps/core/: RULE.md  pyproject.toml
apps/core/docs/: ARCHITECTURE.md
apps/core/src/: __init__.py  config.py  main.py
apps/core/src/agents/: connector.py  models.py  registry.py
apps/core/src/gateway/: README.md  __init__.py  auth.py  connection.py  handler.py  queue.py  server.py
apps/core/src/personality/: engine.py  models.py
apps/core/src/runtime/: __init__.py
apps/core/src/scenarios/: base.py  simple.py
apps/core/src/world/: engine.py
apps/core/tests/: test_personality.py
apps/observer/: RULE.md
apps/observer/docs/: ARCHITECTURE.md
apps/theater/: RULE.md
apps/theater/docs/: ARCHITECTURE.md
docs/architecture/: AGENT_INTEGRATION.md  APPS_OVERVIEW.md  PRINCIPLES.md  TECH_STACK.md
docs/personality/: DIMENSIONS.md  THEORY_FOUNDATION_REPORT.md
scripts/: run_demo.py  setup_conda.sh  test_agent_integration.py
