[project]
name = "personiverse-core"
version = "0.1.0"
description = "PersonaVerse Core - World Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-socketio>=5.11",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.26",
    "redis>=5.0",
    "celery>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.2",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
